conf/muzcal/muzcal-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: muzcal

spec:
  ports:
  - name: muzcal-http
    protocol: TCP
    port: 80
  selector:
    app: muzcal
